[package]
name = "coden"
version = "0.1.0"
edition = "2021"
authors = ["Eathox"]

[dependencies]
log = { workspace = true }
arma-rs = { workspace = true, features = ["serde"] }

ciborium = "0.2.1"
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
message-io = { version = "0.18.0", default-features = false, features = [
    "tcp",
] }
