[package]
name = "coden"
version = "0.1.0"
edition = "2021"
authors = ["Eathox"]

[dependencies]
log = { workspace = true }
arma-rs = { workspace = true, features = ["serde"] }
crossbeam-channel = { workspace = true }

ciborium = "0.2.2"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
message-io = { version = "0.18.1", default-features = false, features = [
    "tcp",
] }
